; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_wiiusb_hid.c_wiiusb_hid_joypad_axis.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_wiiusb_hid.c_wiiusb_hid_joypad_axis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@AXIS_NONE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i32, i64)* @wiiusb_hid_joypad_axis to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @wiiusb_hid_joypad_axis(i8* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_2__*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i64 0, i64* %8, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %11, %struct.TYPE_2__** %9, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* @AXIS_NONE, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i64 0, i64* %4, align 8
  br label %57

16:                                               ; preds = %3
  %17 = load i64, i64* %7, align 8
  %18 = call i32 @AXIS_NEG_GET(i64 %17)
  %19 = icmp slt i32 %18, 4
  br i1 %19, label %20, label %35

20:                                               ; preds = %16
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = load i32, i32* %6, align 4
  %25 = zext i32 %24 to i64
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  %27 = load i32, i32* %6, align 4
  %28 = load i64, i64* %7, align 8
  %29 = call i32 @AXIS_NEG_GET(i64 %28)
  %30 = call i64 @pad_connection_get_axis(i32* %26, i32 %27, i32 %29)
  store i64 %30, i64* %8, align 8
  %31 = load i64, i64* %8, align 8
  %32 = icmp sge i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %20
  store i64 0, i64* %8, align 8
  br label %34

34:                                               ; preds = %33, %20
  br label %55

35:                                               ; preds = %16
  %36 = load i64, i64* %7, align 8
  %37 = call i32 @AXIS_POS_GET(i64 %36)
  %38 = icmp slt i32 %37, 4
  br i1 %38, label %39, label %54

39:                                               ; preds = %35
  %40 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 0
  %42 = load i32*, i32** %41, align 8
  %43 = load i32, i32* %6, align 4
  %44 = zext i32 %43 to i64
  %45 = getelementptr inbounds i32, i32* %42, i64 %44
  %46 = load i32, i32* %6, align 4
  %47 = load i64, i64* %7, align 8
  %48 = call i32 @AXIS_POS_GET(i64 %47)
  %49 = call i64 @pad_connection_get_axis(i32* %45, i32 %46, i32 %48)
  store i64 %49, i64* %8, align 8
  %50 = load i64, i64* %8, align 8
  %51 = icmp sle i64 %50, 0
  br i1 %51, label %52, label %53

52:                                               ; preds = %39
  store i64 0, i64* %8, align 8
  br label %53

53:                                               ; preds = %52, %39
  br label %54

54:                                               ; preds = %53, %35
  br label %55

55:                                               ; preds = %54, %34
  %56 = load i64, i64* %8, align 8
  store i64 %56, i64* %4, align 8
  br label %57

57:                                               ; preds = %55, %15
  %58 = load i64, i64* %4, align 8
  ret i64 %58
}

declare dso_local i32 @AXIS_NEG_GET(i64) #1

declare dso_local i64 @pad_connection_get_axis(i32*, i32, i32) #1

declare dso_local i32 @AXIS_POS_GET(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
